deploy/kubernetes/bankservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankservice
  template:
    metadata:
      labels:
        app: bankservice
    spec:
      containers:
        - name: bankservice
          image: kpedromonico/bankservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: bank-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: bankservice
  ports:
    - name: bankservice
      protocol: TCP
      port: 80
      targetPort: 80
