deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/transactions
            pathType: Prefix
            backend:
              service:
                name: bank-clusterip-srv
                port:
                  number: 80

          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment-clusterip-srv
                port:
                  number: 80

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip-srv
                port:
                  number: 80
